package com.stage.backend.enums;

public enum Role {
    USER,
    ADMIN_CODING_CHALLENGE,
    MANAGER_RH,
    ADMIN_CODEPULSE
}
