package com.stage.backend.enums;

public enum StatutDemandeReinit {
    EN_ATTENTE,
    LIEN_ENVOYE,
    MOT_DE_PASSE_TEMPORAIRE,
    REJETEE
}
