package com.stage.backend.enums;

public enum StatutFeedback {
    EN_COURS,
    NON_SOUMIS,
    SOUMIS
}
