package com.stage.backend.enums;

public enum StatutNotification {
    EN_ATTENTE,
    ENVOYEE,
    ECHEC,
    LUE
}
