package com.stage.backend.enums;

public enum TypeQuestion {
    NOTE,
    TEXTE,
    CHOIX
}
